<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.santotomas.trecibo.RegisterActivity"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-29dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Aquí\nes nuestro\nprimer paso \njunto a tí! "
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_oval_white" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="187dp"
                    android:layout_height="198dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    app:srcCompat="@drawable/ic_register_qr" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:hint="@string/register_name_hint"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:maxLength="40"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:hint="@string/register_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:maxLength="40"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:hint="@string/register_phone_hint"
                            android:inputType="number"
                            android:maxLength="9"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        app:startIconDrawable="@drawable/ic_baseline_password_24"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:maxLength="40"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/register_button_register"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"
                        android:text="¿Ya tienes una cuenta?"
                        android:textAlignment="center"
                        android:textColor="@color/themeColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"
        android:adjustViewBounds="false"/>

</RelativeLayout>