<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCollect">

    <RelativeLayout
        android:id="@+id/relativeLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/login_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:context="cl.santotomas.trecibo.LoginActivity">

        <ScrollView
            android:layout_width="363dp"
            android:layout_height="457dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="257dp"
                            android:layout_height="97dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="0dp"
                            android:fontFamily="@font/abeezee"
                            android:paddingBottom="30dp"
                            android:text="Generar un código en minutos. Empieza a recibir pagos al instante sin tener que pagar arriendo o mantención. Así de fácil es empezar a aceptar pagos con código QR."
                            android:textAlignment="center"
                            android:textColor="@color/darkTextColor"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="104dp"
                            android:layout_height="131dp"
                            android:layout_marginStart="-6dp"
                            android:layout_toEndOf="@+id/textView2"
                            android:src="@drawable/ic_home_collector_qr" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="262dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abeezee"
                            android:text="Creación QR de Cobro"
                            android:textAlignment="center"
                            android:textColor="@color/darkTextColor"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </ScrollView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/collect_amount"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputAmount"
                    style="@style/parent"
                    android:layout_width="323dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtAmount"
                        style="@style/modifiedEditText"
                        android:layout_width="match_parent"
                        android:layout_height="87dp"
                        android:fontFamily="@font/abeezee"
                        android:inputType="number"
                        android:maxLength="8"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textSize="60dp"
                        app:errorEnabled="true"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputReason"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    app:startIconDrawable="@drawable/ic_baseline_description_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtReason"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/abeezee"
                        android:hint="@string/collect_description"
                        android:inputType="textAutoCorrect"
                        android:maxLength="40"
                        android:maxLines="1"
                        app:errorEnabled="true"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/cirQRButton"
                    style="@style/loginButton"
                    android:layout_width="167dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/collect_btn_qr"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</FrameLayout>